[package]
name = "microcall"
version = "0.1.0"
authors = ["tz70s <su3g4284zo6y7@gmail.com>"]

[dependencies]
tokio-uds = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
futures = "0.1"
futures-cpupool = "0.1"
hyper = "0.11"
serde_json = "1.0"
uuid = { version = "0.6", features = ["v4"] }
log = "0.4.0"
env_logger = "0.6.0"

